# deep-learning-hands-on-rest

./: E.db  Manifest.toml  Project.toml  README.julia.md  README.md  data.py  notebook-julia.ipynb  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: ML-checkpoint.ipynb  notebook-checkpoint.ipynb
