[tool.poetry]
name = "deep-learning-hands-on-rest"
version = "0.1.0"
description = "Interactive session to implement deep learning methods in python using TensorFlow for the REST GDR Machine Learning Discussion Meeting."
authors = ["Jack Wetherell <jack.wetherell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.4"
scipy = "^1.7.3"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
